# Glanus

./: .cursorrules  .dockerignore  .env.example  .eslintrc.json  .gitignore  .impeccable.md  ARCHITECTURE.md  Dockerfile  EasyPanel.md  docker-compose.yml  docker-entrypoint.sh  instrumentation.ts  jest.config.js  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  scratch.ts  scratch2.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  ts_errors.txt  tsconfig.json
.agent/: SKILLS.md
.github/: copilot-instructions.md
.github/instructions/: agent-frontend.instructions.md  api-routes.instructions.md  deployment.instructions.md  prisma.instructions.md  react-components.instructions.md  remote-desktop.instructions.md  security.instructions.md  services.instructions.md  tauri-capabilities.instructions.md  tauri-rust.instructions.md  tests.instructions.md  zod-schemas.instructions.md
.github/prompts/: agent-review.prompt.md  new-api-route.prompt.md  new-tauri-command.prompt.md  tenant-isolation-audit.prompt.md
.github/workflows/: build-windows.yml
__tests__/api/: cron-cleanup.test.ts
__tests__/lib/: cortex-reasoning.test.ts  dynamic-fields.test.ts  reflex-automation.test.ts
__tests__/qa-hardening/: component-fixes.test.tsx  security-fixes.test.ts  ux-enhancements.test.tsx  visual-export.test.tsx
__tests__/security/: agent-auth.test.ts  csrf.test.ts
__tests__/setup/: test-db.ts  test-helpers.ts
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
app/accept-invite/: page.tsx
app/account/: layout.tsx  page.tsx
app/admin/: error.tsx  loading.tsx
app/assets/: error.tsx  loading.tsx  page.tsx
app/dashboard/: error.tsx  loading.tsx  page.tsx
app/download-agent/: loading.tsx  page.tsx
app/force-reset-password/: page.tsx
app/forgot-password/: page.tsx
app/login/: loading.tsx  page.tsx
app/onboarding/: loading.tsx  page.tsx
app/partners/: error.tsx  layout.tsx  loading.tsx
components/: AuthGuard.tsx  DashboardNav.tsx  ImpersonationBanner.tsx  PartnerLayoutShell.tsx  PartnerNav.tsx  RBACGuard.tsx  RBACProvider.tsx  ThemeProvider.tsx  WorkspaceSwitcher.tsx  WorkspaceWizard.tsx
e2e/: alerts-crud.spec.ts  alerts.spec.ts  api-health.spec.ts  api-security.spec.ts  api.spec.ts  assets-crud.spec.ts  assets.spec.ts  auth.spec.ts  navigation.spec.ts  security-headers.spec.ts  workspace-pages.spec.ts  workspace-settings.spec.ts
glanus-agent/: .dockerignore  CHANGELOG.md  Dockerfile  QUICKSTART.md
glanus-agent/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_sender.rs
glanus-agent/src-tauri/src/: client.rs  command_security.rs  commands.rs  config.rs  discovery.rs  executor.rs  heartbeat.rs  inventory.rs  lib.rs  main.rs  monitor.rs  registration.rs  software.rs  storage.rs  updater.rs
glanus-agent/src-tauri/src/remote_desktop/: capture.rs  encoder.rs  input.rs  mod.rs  peer.rs  runtime.rs  signaling.rs
hooks/: use-auth.ts  use-theme.ts  useCan.ts
lib/: action-handlers.ts  alert-evaluator.ts  auth.ts  cache.ts  db.ts  dynamic-fields.ts  email-service.ts  env.ts  errors.ts  generateQRCode.ts  logger.ts  notification-orchestrator.ts  rls-context.ts  rls-session.ts  script-security.ts  ssh-manager.ts  toast.tsx  validation.ts  webhook-service.ts
prisma/: schema.prisma  seed-dynamic-categories.ts  seed.ts  simple-seed.ts
scripts/: demo-dynamic-assets.ts  migrate-legacy-assets.ts  migrate-to-workspaces.ts  release-agent-linux.sh  release-agent-macos.sh  release-agent-windows.ps1  release-agent.sh  release-all.sh  release-web.sh  seed-exam-questions.ts  seed-plan-configs.ts
stores/: authStore.ts  themeStore.ts
theme/: branding.ts  config.ts  index.ts
types/: next-auth.d.ts
utils/: rbac.ts
(+534 files in other folders)
